--- a/Frontend/Adventurush/src/Styles/Body1.module.css
+++ b/Frontend/Adventurush/src/Styles/Body1.module.css
@@ -1,15 +1,62 @@
-.Body1{
-    width: 119.5rem;
-height: 41.625rem;
-flex-shrink: 0;
-border:2px solid black;
+*{
+    margin: 0%;
+    padding: 0% ;
 }
-/* .heading1{
+.Body1{
+    position:relative;
+    width: 118rem;
+height: 55.625rem;
+flex-shrink: 0;
+/* border:2px solid black; */
+overflow: hidden;
+}
+.Body1::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/skydiving.jpg');
+    background-size: cover;
+    animation: slideshow 20s infinite;
+}
+@keyframes slideshow {
+    0% {
+        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/skydiving.jpg'); /* First background image */
+    }
+    25% {
+        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/trekking.jpg'); /* Second background image */
+    }
+    50% {
+        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/Ladakh-bike-tour.jpg'); /* Third background image */
+    }
+    75% {
+        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/Scuba.jpg'); /* Fourth background image */
+    }
+    100% {
+        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/skydiving.jpg'); /* Back to first background image */
+    }
+}
 
-} */
-.choose{
+.heading1{
+    position: relative;
+    z-index: 1;
+    margin-left: 5rem;
+    margin-top:15rem;
+    color: white;
+font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+font-size: 4.75rem;
+font-style: italic;
+font-weight: 800;
+line-height: normal;
+}
+.chooseBtn{
+    position: relative;
+    margin-left: 5rem;
     width: 16.6875rem;
 height: 3.375rem;
+border-radius: 0rem;
 flex-shrink: 0;
 background: #F00;
 color: #FFF;
@@ -19,15 +66,56 @@ font-style: normal;
 font-weight: 500;
 line-height: normal;
 }
-.bodySlider{
-    width: 42.375rem;
-height: 17.8125rem;
+.sliderBody{
+    z-index: 1;
+    position: relative;
+    display: flex;
+    margin-top: 3rem;
+    width: 65.375rem;
+height: 20.8125rem;
 flex-shrink: 0;
+/* border: 2px solid green; */
+overflow:hidden;
 }
-.SliderComp{
-    width: 12.25rem;
-    height: 16.1875rem;
-    flex-shrink: 0;
-    border-radius: 1.25rem;
-background: #3F2424;
+.sliderTitle{
+    z-index: 1;
+    color: white;
+font-family: Poppins;
+font-size: 1rem;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+position: absolute;
+top: 85%;
+left: 50%; 
+/* transform: translate(-50%, -50%); */
 }
+.slide{
+    margin-left: 5rem;
+    position: relative;
+    display: flex;
+    width: 120.25rem;
+    /* border: 2px solid red;
+    border-radius: 20px ; */
+}
+.slide img {
+    border-radius: 1.25rem; /* Set the border radius */
+}
+
+.prevBtn,.nextBtn{
+    background-color: #F00;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 25rem;
+    z-index: 1;
+    position:absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.nextBtn{
+    right: .1rem;
+}
+.prevBtn{
+    left: 2.5rem;
+}
+
