--- a/Frontend/Adventurush/src/Styles/Body1.module.css
+++ b/Frontend/Adventurush/src/Styles/Body1.module.css
@@ -53,18 +53,19 @@ line-height: normal;
 }
 .chooseBtn{
     position: relative;
+    margin-top: .5rem;
     margin-left: 5rem;
     width: 16.6875rem;
-height: 3.375rem;
-border-radius: 0rem;
-flex-shrink: 0;
-background: #F00;
-color: #FFF;
-font-family: Poppins;
-font-size: 1.0625rem;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
+    height: 3.375rem;
+    border-radius: 0rem;
+    flex-shrink: 0;
+    background: #F00;
+    color: #FFF;
+    font-family: Poppins;
+    font-size: 1.0625rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 .sliderBody{
     z-index: 1;
@@ -72,34 +73,39 @@ line-height: normal;
     display: flex;
     margin-top: 3rem;
     width: 65.375rem;
-height: 20.8125rem;
-flex-shrink: 0;
-/* border: 2px solid green; */
-overflow:hidden;
+    height: 20.8125rem;
+    flex-shrink: 0;
+    /* overflow: hidden; */
+    border: 2px solid green;
 }
-.sliderTitle{
+.sliderTitle
+{
     z-index: 1;
     color: white;
-font-family: Poppins;
-font-size: 1rem;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-position: absolute;
-top: 85%;
-left: 50%; 
-/* transform: translate(-50%, -50%); */
+    font-family: Poppins;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    position: absolute;
+    top: 85%;
+    left: 35%; 
+    /* transform: translate(-50%, -50%); */
 }
 .slide{
+    transition: transform 0.3s ease;
     margin-left: 5rem;
     position: relative;
     display: flex;
     width: 120.25rem;
-    /* border: 2px solid red;
-    border-radius: 20px ; */
+    border: 2px solid red;
+    border-radius: 20px ;
 }
 .slide img {
     border-radius: 1.25rem; /* Set the border radius */
+}
+.slide:hover img {
+    transform: scale(1.1); /* Increase the scale to zoom in (1.1 is 110% of original size) */
 }
 
 .prevBtn,.nextBtn{
