--- a/Frontend/Adventurush/src/Styles/Body1.module.css
+++ b/Frontend/Adventurush/src/Styles/Body1.module.css
@@ -75,8 +75,8 @@ line-height: normal;
     width: 65.375rem;
     height: 20.8125rem;
     flex-shrink: 0;
-    /* overflow: hidden; */
-    border: 2px solid green;
+    overflow: hidden;
+    /* border: 2px solid green; */
 }
 .sliderTitle
 {
@@ -98,7 +98,7 @@ line-height: normal;
     position: relative;
     display: flex;
     width: 120.25rem;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     border-radius: 20px ;
 }
 .slide img {
