--- a/Frontend/Adventurush/src/Styles/Body1.module.css
+++ b/Frontend/Adventurush/src/Styles/Body1.module.css
@@ -72,10 +72,11 @@ line-height: normal;
     position: relative;
     display: flex;
     margin-top: 3rem;
-    width: 65.375rem;
+    width: 66.375rem;
     height: 20.8125rem;
     flex-shrink: 0;
-    overflow: hidden;
+    transition: transform 0.5s ease;
+    /* overflow: hidden; */
     /* border: 2px solid green; */
 }
 .sliderTitle
@@ -93,7 +94,7 @@ line-height: normal;
     /* transform: translate(-50%, -50%); */
 }
 .slide{
-    transition: transform 0.3s ease;
+    transition: transform 0.5s ease;
     margin-left: 5rem;
     position: relative;
     display: flex;
@@ -105,7 +106,7 @@ line-height: normal;
     border-radius: 1.25rem; /* Set the border radius */
 }
 .slide:hover img {
-    transform: scale(1.1); /* Increase the scale to zoom in (1.1 is 110% of original size) */
+    transform: scale(1.04); /* Increase the scale to zoom in (1.1 is 110% of original size) */
 }
 
 .prevBtn,.nextBtn{
