--- a/Frontend/Adventurush/src/Styles/Body2.module.css
+++ b/Frontend/Adventurush/src/Styles/Body2.module.css
@@ -36,7 +36,7 @@
 .DealSlide
 {
     margin-left: 2rem;
-    overflow: hidden;
+    /* overflow: hidden; */
     flex-shrink: 0;
     margin-top: 1rem;
     position: relative;
