--- a/Frontend/Adventurush/src/Styles/Body2.module.css
+++ b/Frontend/Adventurush/src/Styles/Body2.module.css
@@ -102,10 +102,10 @@
     flex-shrink: 0;
     background: #F00;
     color: #FFF;
-    font-family: Poppins;
-    font-size: 1.0625rem;
-    font-style: normal;
-    font-weight: 500;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 1.4625rem;
+    font-style:normal;
+    font-weight: 800;
     line-height: normal;
 }
 .nextBtn{
