--- a/Frontend/Adventurush/src/Styles/Body3.module.css
+++ b/Frontend/Adventurush/src/Styles/Body3.module.css
@@ -1,6 +1,6 @@
 .Body3{
     width: 118rem;
-height: 71.875rem;
+height: 110.875rem;
 flex-shrink: 0;
 background: black;
 }
@@ -35,4 +35,118 @@ hr{
     height: 0rem;
     margin-left: 10rem;
     background-color: #FFF;
+}
+.travellerMainDiv{
+    /* padding-left: 10rem; */
+    display: flex;
+    justify-content: space-between;
+    width: 99.375rem;
+    height: 36.9375rem;
+    flex-shrink: 0;
+    /* border: 4px solid red; */
+    margin-top: 2rem;
+    margin-left: 10rem;
+}
+.pickByTravel{
+    position: relative;
+  display: inline-block;
+    border-radius: 2rem;
+    width: 29.9375rem;
+    height: 36.7125rem;
+    flex-shrink: 0;
+    /* border: 2px solid burlywood; */
+    overflow: hidden;
+}
+.pickByTravel img {
+    max-width: 100%; /* Ensures the image does not exceed the container width */
+    height: auto; /* Maintains the aspect ratio of the image */
+    display: block; /* Ensures the image is treated as a block element */ 
+    transition: transform 0.2s ease; 
+  }
+  .pickByTravel:hover img {
+    transform: scale(1.1); /* Zoom in by 20% on hover */
+  }
+.pickByTravelTitle{
+    position: absolute;
+  top: 88%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+  /* background-color: rgba(0, 0, 0, 0.7); */
+  color: #fff;
+  padding: 10px;
+  /* text-align: center; */
+  font-size: 35px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.pickByTravelSub{
+    margin-top: .4rem;
+    position: absolute;
+    top: 93%;
+    left: 26%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    padding: 10px;
+    /* text-align: center; */
+    font-size: 28px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* ------------------------------------------------------------------------------------*/
+
+
+.adventureMainDiv{
+    /* padding-left: 10rem; */
+    display: flex;
+    justify-content: space-between;
+    width: 99.375rem;
+    height: 36.9375rem;
+    flex-shrink: 0;
+    /* border: 4px solid red; */
+    margin-top: 2rem;
+    margin-left: 10rem;
+}
+.pickByAdventure{
+    position: relative;
+  display: inline-block;
+    border-radius: 2rem;
+    width: 29.9375rem;
+    height: 36.7125rem;
+    flex-shrink: 0;
+    /* border: 2px solid burlywood; */
+    overflow: hidden;
+}
+.pickByAdventure img{
+    max-width: 100%; /* Ensures the image does not exceed the container width */
+    height: auto; /* Maintains the aspect ratio of the image */
+    display: block; /* Ensures the image is treated as a block element */ 
+    transition: transform 0.2s ease; 
+}
+.pickByAdventure img:hover{
+    transform: scale(1.1); /* Zoom in by 20% on hover */
+}
+.pickByAdventureTitle
+{
+    position: absolute;
+    top: 88%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    /* background-color: rgba(0, 0, 0, 0.7); */
+    color: #fff;
+    padding: 10px;
+    /* text-align: center; */
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.pickByAdventureSub{
+    margin-top: .4rem;
+    position: absolute;
+    top: 93%;
+    left: 30%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+    padding: 10px;
+    /* text-align: center; */
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
 }
