--- a/Frontend/Adventurush/src/Styles/Body4.module.css
+++ b/Frontend/Adventurush/src/Styles/Body4.module.css
@@ -1,21 +1,15 @@
 .body4{
     display: flex;
     height:80rem ;
-    width: 119rem;
+    width: 117rem;
     /* border: 2px solid red; */
 }
 .left{
     height: 78rem;
-    width:59.5rem;
+    width:50%;
 }
 .right{
     height: 78rem;
-    width:59.5rem;
+    width:50%rem;
 }
 
-.Disc{
-
-}
-.custom{
-
-}
