--- a/Frontend/Adventurush/src/Styles/Body1.module.css
+++ b/Frontend/Adventurush/src/Styles/Body1.module.css
@@ -1,13 +1,12 @@
 *{
-    margin: 0%;
-    padding: 0% ;
+    margin: 0;
+    padding: 0;
 }
 .Body1{
     position:relative;
-    width: 117rem;
-height: 55.625rem;
+    width: 100%;
+height: 61rem;
 flex-shrink: 0;
-/* border:2px solid black; */
 overflow: hidden;
 }
 .slogan{
@@ -36,19 +35,19 @@ overflow: hidden;
 }
 @keyframes slideshow {
     0% {
-        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/skydiving.jpg'); /* First background image */
+        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/skydiving.jpg'); 
     }
     25% {
-        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/trekking.jpg'); /* Second background image */
+        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/trekking.jpg'); 
     }
     50% {
-        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/Ladakh-bike-tour.jpg'); /* Third background image */
+        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/Ladakh-bike-tour.jpg'); 
     }
     75% {
-        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/Scuba.jpg'); /* Fourth background image */
-    }
+        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/Scuba.jpg'); 
+        }
     100% {
-        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/skydiving.jpg'); /* Back to first background image */
+        background-image: url('https://www.adventurush.com/wp-content/uploads/2024/01/skydiving.jpg'); 
     }
 }
 
@@ -56,39 +55,58 @@ overflow: hidden;
     position: relative;
     z-index: 1;
     margin-left: 5rem;
-    margin-top:15rem;
+    margin-top:25rem;
     color: white;
 font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-font-size: 4.75rem;
+font-size: 2.75rem;
 font-style: italic;
 font-weight: 800;
 line-height: normal;
 }
 .chooseBtn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
-    margin-top: .5rem;
+    text-decoration: none;
+    margin-top: 1.5rem;
     margin-left: 5rem;
-    width: 16.6875rem;
-    height: 3.375rem;
+    width: 10.6875rem;
+    height: 2.6rem;
     border-radius: 0rem;
     flex-shrink: 0;
     background: #F00;
     color: #FFF;
     font-family: Poppins;
-    font-size: 1.0625rem;
+    font-size: .95rem;
     font-style: normal;
-    font-weight: 500;
-    line-height: normal;
+}
+.slideLink
+{
+    margin-left: 1rem;
+    position: relative;
+    display: flex;
+    width: 33%;
+    border-radius: 20px ; 
+   
+}
+.slideLink img {
+    border-radius: 1.25rem; 
+}
+.slideLink:hover img { 
+    transform: scale(1.04); /*Increase the scale to zoom in (1.1 is 110% of original size) */
 }
 .sliderBody{
     z-index: 1;
     position: relative;
     display: flex;
     margin-top: 3rem;
-    width: 66.375rem;
-    height: 20.8125rem;
+    margin-left: 5rem;
+    width: 36.375rem;
+    height: 13.8125rem;
     flex-shrink: 0;
     transition: transform 0.5s ease;
+    justify-content: space-between; 
 }
 .sliderTitle
 {
@@ -102,28 +120,13 @@ line-height: normal;
     position: absolute;
     top: 85%;
     left: 35%; 
-    /* transform: translate(-50%, -50%); */
-}
-.slide{
-    transition: transform 0.5s ease;
-    margin-left: 5rem;
-    position: relative;
-    display: flex;
-    width: 16.25rem;
-    /* border: 2px solid red; */
-    border-radius: 20px ;
-}
-.slide img {
-    border-radius: 1.25rem; /* Set the border radius */
-}
-.slide:hover img {
-    transform: scale(1.04); /* Increase the scale to zoom in (1.1 is 110% of original size) */
+    
 }
 
 .prevBtn,.nextBtn{
     background-color: #F00;
-    height: 4rem;
-    width: 4rem;
+    height: 3rem;
+    width: 3rem;
     border-radius: 25rem;
     z-index: 1;
     position:absolute;
@@ -131,22 +134,11 @@ line-height: normal;
     transform: translateY(-50%);
 }
 .nextBtn{
-    right: .1rem;
+    right: -1.5rem;
 }
 .prevBtn{
-    left: 2.5rem;
+    left: -1rem;
 }
-.slideLink
-{
-   
-    transition: transform 0.5s ease;
-    margin-left: 1rem;
-    position: relative;
-    display: flex;
-    width: 19.75rem;
-    /* border: 2px solid red; */
-    border-radius: 20px ; 
-   
-}
+
 
 
