--- a/Frontend/Adventurush/src/Styles/Body2.module.css
+++ b/Frontend/Adventurush/src/Styles/Body2.module.css
@@ -2,10 +2,8 @@
 {
     background-color: black;
     height: 87.5rem;
-    width: 117rem;
+    width: 100%;
     padding-bottom: 2rem;
-    /* border: 5px solid green */
-    ;
 }
 .head1{
     padding-top: 5rem;
@@ -26,7 +24,7 @@
     display: flex;
     margin-top: 3rem;
     margin-left: 10rem;
-    width: 105rem;
+    width: 100%;
     height: 20.8125rem;
     flex-shrink: 0;
     /* border: 5px solid pink; */
