--- a/Frontend/Adventurush/src/Styles/Nav.module.css
+++ b/Frontend/Adventurush/src/Styles/Nav.module.css
@@ -1,50 +1,63 @@
-
-.searchbar{
-    color: #FFF;
-    font-family:INTER;
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    width: 52.125rem;
-    height: 3.1875rem;
-    flex-shrink: 0;
-    border-radius: 1.875rem;
-    border: 1px solid #FFF;
-    background: #000;
-    /* margin-top: 1.44rem; */
-    margin-bottom: 0.09rem;
-    margin-left: 25.16rem;
-    padding-left: 3rem;
+.mainNav{
+    /* border: 2px solid red; */
+    position: fixed;
+    width: 100%;
+    height: 140px;
+    display: flex;
+    flex-direction: column; /* Stack children vertically */
+    z-index: 2;
 }
 .navbar{
+    height: 4rem;
     border: 1px solid transparent;
-    width: 117rem;
-    height: 5.5rem;
-    flex-shrink: 0;
+    width: 100%;
+    height: 50%;
     background: #000;
-    padding-top: 2rem;
+    /* padding-top: 2rem; */
 }
-
-#anchor:visited{
-    text-decoration: none;
+.searchbar{
+    margin-left: 13rem;
+    font-size: 1rem;
+    color: #FFF; 
+    font-style: normal;
+    font-weight: 100;
+    width: 40%;
+    height: 1.85rem;
+    border-radius: 1.875rem;
+    border: .25px solid #FFF;
+    background: #000;
+    margin-top: 1rem;
+    text-align:left;
+    padding-left: 2.5rem;
+    
+}
+.searchbar::placeholder {
+    color: #888; /* Placeholder text color */
+    font-family: Montserrat, sans-serif;
+    font-size: 15px; /* Font size */
+    opacity: 1; /* Opacity (default is 0.7 in most browsers) */
+  }
+.secondNav a{
+    height: 50%;
+    text-decoration: none;   
 }
 .logo{
     display: inline-block;
+    height: 2rem;
+    width: 6rem;
 }
-.mainNav{
-    position: fixed;
-    z-index: 2;
-}
+.logo img {
+    max-width: 100%;
+    max-height: 100%; 
+  }
 .anc{
     overflow: hidden;
     display: flex;
-    flex-shrink: 0;
-    height: 4rem;
-    width: 24.91%;
+    height: 80.6%;
+    width: 24.893%;
     border: 1px solid black ;
-    font-family: Poppins;
-    font-size: 1.875rem;
+    font-family: Roboto, sans-serif;
+    font-size: 1.1rem;
     line-height: normal;
     display: inline-block;
     text-align: center;
@@ -52,31 +65,49 @@
     background-color: rgb(250, 250, 250);
     /* border: 2px solid yellow; */
 }
-.anc::before {
-    content: '';
-    display: block;
-    width: 0;
-    height: 2px; /* Adjust the thickness of the underline */
-    background-color: #007bff; /* Color of the underline */
-    position: absolute;
-    bottom: -2px; /* Position it at the bottom */
-    left: 0;
-    transition: width 0.3s ease; /* Transition for smooth effect */
-}
 
-.anc:hover::before {
-    width: 100%;
-}
-.secondNav{
+
+
+.contacts{
+    height: 5.5rem;
+    width: 19.8rem;
+    margin-top: -4.5rem;
+    margin-left: 98rem;
+    background-color: white;
+    justify-content: space-between;
+    align-items: center;
+    /* position: relative; */
     display: flex;
     
-
 }
-.secondNav a{
+.call{
+    height: 5rem;
+    width: 6rem;
+    /* background-color:brown; */
+}
+.call img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.profile{
+    background-color: red;
+    width: 6rem;
+    height: 5rem;  
+}
+.profile img{
+    height: auto;
+    max-width: 100%;
+}
+.cart{
+    background-color:green ;
+    width: 6rem;
+    height: 5rem;
+}
+#anchor:visited{
     text-decoration: none;
-    color: black;
-
 }
+
 
 
 
